--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.9.4",
     "client-oauth2": "^4.3.3",
     "concurrently": "^5.3.0",
     "electron": "^11.1.0",
